--- a/hacking.html
+++ b/hacking.html
@@ -57,6 +57,10 @@
             <img src="media/imagen4.png" alt="Expresiones Regulares en Linux" class="article-image">
             <h2><a href="hacking/expresiones.html">Expresiones Regulares en Linux</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Archivos Sensibles en Linux" class="article-image">
+            <h2><a href="hacking/archivos.html">Archivos Sensibles en Linux</a></h2>
+        </div>
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
