--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -303,13 +303,15 @@
                 </div>
                 
  <!--               
+    Añadir esta linea:   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    
                 <div class="mi-contenedor">
                     <div class="barra-superior">
                         <button id="boton-copiar"><i class="fas fa-copy"></i>&nbsp;Copy</button>
                     </div>
                     <div class="codigo">
                         <pre>
-<code>// Tu código aquí
+<code>// Tu código aquí 
 function holaMundo() {
     console.log("Hola, mundo!");
 }</code>
