--- a/hacking/expresiones.html
+++ b/hacking/expresiones.html
@@ -496,7 +496,7 @@
                 </div>
                 <h2>Conclusión</h2>
                 <p>Estos son solo algunos ejemplos de cómo las expresiones regulares se utilizan en conjunto con diversas herramientas en Linux para buscar, editar y procesar texto de manera eficiente. Las expresiones regulares son una habilidad esencial para administradores de sistemas y usuarios de Linux que trabajan con texto y datos de manera regular.</p>
-                <div class="blog-image">
+                <div class="blog-image-grande">
                     <img src="media/expresion2.jpeg" alt="">
                 </div>
             </div>   
