--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -702,7 +702,7 @@
 
                 <h2>Conclusión</h2>                    
                 <p>Si bien las interfaces gráficas son más accesibles para usuarios no técnicos, aprender la CLI es una habilidad valiosa para aquellos que desean profundizar en el funcionamiento interno de los sistemas y maximizar su productividad. A través de la práctica y la familiarización con los comandos más comunes, los usuarios pueden adquirir confianza y aprovechar al máximo el potencial de la línea de comandos.</p>
-                <p>En resumen, la CLI es una herramienta imprescindible para cualquier entusiasta de la tecnología, desarrollador o profesional de la informática que busque mejorar su eficiencia y conocimientos en el manejo de sistemas operativos y aplicaciones. A medida que se avanza en el dominio de la línea de comandos, se descubre un mundo de posibilidades y se adquiere una valiosa habilidad que puede marcar la diferencia en el ámbito tecnológico.</p>
+                <p>La CLI es una herramienta imprescindible para cualquier entusiasta de la tecnología, desarrollador o profesional de la informática que busque mejorar su eficiencia y conocimientos en el manejo de sistemas operativos y aplicaciones. A medida que se avanza en el dominio de la línea de comandos, se descubre un mundo de posibilidades y se adquiere una valiosa habilidad que puede marcar la diferencia en el ámbito tecnológico.</p>
                 <div class="blog-image">
                     <img src="media/linux5.jpg" alt="">
                 </div>
