--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -46,7 +46,7 @@
                 <p>Imagina una red neuronal para identificar animales. La primera capa podría detectar líneas y bordes en la imagen, la siguiente capa reconocería formas básicas, como círculos o triángulos, y las últimas capas identificarían características más avanzadas y específicas de los animales, como orejas puntiagudas o patrones de piel.</p>
                 <p>El entrenamiento de estas redes requiere una gran cantidad de datos y potencia de cómputo. Pero una vez que el proceso de entrenamiento se completa, la red neuronal puede generalizar y realizar tareas, incluso con datos nuevos que nunca ha visto antes.</p>
                 <div class="blog-image-grande">
-                    <img src="media/deep1.jpg" alt="">
+                    <img src="media/deep5.png" alt="">
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>El Deep Learning ha impulsado el progreso en diversas áreas y ha llevado a avances significativos en la sociedad. A continuación, se presentan algunas aplicaciones del Deep Learning que tal vez encuentres familiar:</p>
@@ -92,7 +92,7 @@
                         </ol>
                 </ul>        
                 <br>
-                <p>En resumen, el Machine Learning es una disciplina más amplia que abarca diversos enfoques para el aprendizaje a partir de datos, mientras que el Deep Learning es una técnica específica dentro del Machine Learning que utiliza redes neuronales profundas para aprender patrones y características complejas en grandes conjuntos de datos. El Deep Learning ha demostrado ser especialmente efectivo en tareas de alto nivel, como reconocimiento de imágenes, procesamiento del lenguaje natural y juegos de estrategia, impulsando avances significativos en el campo de la inteligencia artificial.</p>
+                <p>El Machine Learning es una disciplina más amplia que abarca diversos enfoques para el aprendizaje a partir de datos, mientras que el Deep Learning es una técnica específica dentro del Machine Learning que utiliza redes neuronales profundas para aprender patrones y características complejas en grandes conjuntos de datos. El Deep Learning ha demostrado ser especialmente efectivo en tareas de alto nivel, como reconocimiento de imágenes, procesamiento del lenguaje natural y juegos de estrategia, impulsando avances significativos en el campo de la inteligencia artificial.</p>
                 <div class="blog-image-doble-grande">
                     <img src="media/deep2.jpg" alt="">
                     <img src="media/deep4.png" alt="">
