--- a/electronica/capacitor.html
+++ b/electronica/capacitor.html
@@ -40,7 +40,7 @@
                 <p>El capacitor es un componente pasivo capaz de almacenar carga eléctrica. Consiste en dos placas conductoras separadas por un material aislante conocido como dieléctrico. Las placas pueden estar hechas de diferentes materiales conductores, como aluminio o cobre, mientras que el dieléctrico puede ser aire, papel, plástico, cerámica u otros materiales específicos.</p>
                 <p>Cuando se aplica voltaje entre las placas del capacitor, los electrones se acumulan en una de las placas, mientras que la otra se queda con una carga positiva neta. Esto crea un campo eléctrico entre las placas y, debido a la presencia del dieléctrico y al efecto de atracción que se crea al tener cargas contrarias en ambas placas, evita que los electrones atraviesen y se descarguen entre las placas. En otras palabras, el dieléctrico aísla eléctricamente las placas, lo que permite que el capacitor almacene carga temporalmente, aun cuando la fuente de energía no esté alimentando. Siempre y cuando no encuentren un camino con menos resistencia donde puedan unirse.</p>
                 <p>Los capacitores pueden almacenar carga eléctrica, y si se manipulan sin precaución, pueden liberar esta carga en forma de una descarga eléctrica. Esto puede ser peligroso, especialmente si el capacitor tiene una alta capacitancia y se carga a una tensión significativa. Las descargas eléctricas pueden causar quemaduras, lesiones musculares o incluso fibrilación cardíaca en casos extremos.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image">
                     <img src="media/capacitor1.png" alt="">
                 </div>
                 <h2>Cálculo</h2>
@@ -63,7 +63,7 @@
                 <p>Frecuencia de operación: En algunos casos, especialmente cuando se trabaja con señales de alta frecuencia, es importante tener en cuenta la frecuencia de operación para seleccionar un capacitor adecuado. Algunos capacitores están diseñados para trabajar mejor en ciertos rangos de frecuencia.</p>
                 <p>Tolerancia: Al igual que otros componentes electrónicos, los capacitores tienen una tolerancia que indica el rango permitido de variación en su valor nominal. Por ejemplo, si un capacitor tiene una tolerancia del 10%, su valor real podría ser hasta un 10% más alto o más bajo que el valor nominal especificado.</p>
                 <div class="blog-image">
-                    <img src="media/capacitor2.jpg" alt="">
+                    <img src="media/capacitor3.jpg" alt="">
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>Los capacitores tienen una amplia gama de aplicaciones en la electrónica y otras áreas. Algunos usos comunes incluyen:</p>
@@ -75,7 +75,7 @@
                     <li>Almacenamiento de energía: En la investigación de energía renovable y sistemas de distribución eléctrica inteligente, los capacitores se utilizan para almacenar energía y equilibrar las cargas de la red.</li>
                 </ul>
                 <div class="blog-image">
-                    <img src="media/capacitor3.jpg" alt="">
+                    <img src="media/capacitor2.jpg" alt="">
                 </div>                
                 <h2>Tipos de capacitores</h2>
                 <p>Existen varios tipos de capacitores, cada uno con características y aplicaciones específicas. A continuación, se presentan algunos de los tipos más comunes:</p>
