--- a/network/ftp.html
+++ b/network/ftp.html
@@ -68,7 +68,7 @@
                 <h2>Conclusión</h2>
                 <p>Aunque el FTP ha sido una herramienta valiosa durante mucho tiempo, en la actualidad, han surgido tecnologías más avanzadas y seguras para la transferencia de archivos, como SCP (Protocolo de Copia Segura) y SFTP (FTP SSH). Estas opciones utilizan cifrado y autenticación más fuertes, brindando una mayor protección de datos.</p>
                 <p>Sin embargo, el FTP sigue siendo ampliamente utilizado en muchos entornos y continúa siendo una solución confiable para transferir archivos. A medida que la tecnología evoluciona, es probable que veamos una coexistencia de protocolos para satisfacer las diversas necesidades de transferencia de archivos en la era digital.</p>
-                <p>En resumen, el FTP ha sido una herramienta invaluable en la transferencia de archivos durante décadas. Ha permitido la conectividad y el intercambio de información en todo el mundo. Aunque su uso se ha diversificado, y existen alternativas más seguras, sigue siendo una opción popular en muchos entornos. Con el continuo avance de la tecnología, el FTP continuará desempeñando un papel relevante en la transferencia de archivos en la era digital.</p>
+                <p>El FTP ha sido una herramienta invaluable en la transferencia de archivos durante décadas. Ha permitido la conectividad y el intercambio de información en todo el mundo. Aunque su uso se ha diversificado, y existen alternativas más seguras, sigue siendo una opción popular en muchos entornos. Con el continuo avance de la tecnología, el FTP continuará desempeñando un papel relevante en la transferencia de archivos en la era digital.</p>
                 <br>
                 <br>
             </div>   
