--- a/network/osi.html
+++ b/network/osi.html
@@ -177,8 +177,9 @@
                 </ul>
                 <h2>Conclusión</h2>
                 <p>El Modelo OSI es un pilar fundamental en la comprensión de cómo los dispositivos de red interactúan y colaboran para transmitir datos. Cada capa tiene su propio conjunto de funciones y protocolos, y la interacción fluida entre ellas permite que la comunicación sea exitosa. Desde la capa física hasta la capa de aplicación, cada nivel desempeña un papel esencial en el proceso de comunicación que impulsa nuestras redes modernas.</p>
-                <br>
-                <br>
+                <div class="blog-image-grande">
+                    <img src="media/osi4.jpg" alt="">
+                </div>
             </div>   
     </main>
     <script src="../js/script.js"></script>
