--- a/network/smtp.html
+++ b/network/smtp.html
@@ -57,7 +57,7 @@
                 </div>
                 <h2>Conclusión</h2>
                 <p>El SMTP ha sido un pilar fundamental en la comunicación por correo electrónico desde sus inicios. Ha permitido que millones de personas se comuniquen rápidamente, compartan información y realicen negocios en línea. Aunque han surgido tecnologías de mensajería instantánea y otras formas de comunicación, el correo electrónico sigue siendo una herramienta esencial en el ámbito personal y empresarial.</p>
-                <p>En resumen, el SMTP es la tecnología detrás del correo electrónico que ha revolucionado la forma en que nos comunicamos. Su simplicidad y eficacia lo han convertido en un protocolo estándar ampliamente adoptado en todo el mundo. Gracias al SMTP, el correo electrónico se ha convertido en una herramienta indispensable en la era digital actual y seguirá siendo una forma confiable y conveniente de comunicación en el futuro.</p>
+                <p>El SMTP es la tecnología detrás del correo electrónico que ha revolucionado la forma en que nos comunicamos. Su simplicidad y eficacia lo han convertido en un protocolo estándar ampliamente adoptado en todo el mundo. Gracias al SMTP, el correo electrónico se ha convertido en una herramienta indispensable en la era digital actual y seguirá siendo una forma confiable y conveniente de comunicación en el futuro.</p>
                 <br>
                 <br>
             </div>   
