--- a/ia/conceptos.html
+++ b/ia/conceptos.html
@@ -172,7 +172,7 @@
                 <div class="blog-image-grande">
                     <img src="media/concepto10.png" alt="">
                 </div>
-                <p>En resumen, estos conceptos, aunque suenan complejos, son los bloques de construcción que permiten a las máquinas aprender, razonar y tomar decisiones. Piensa en ellos como piezas de un rompecabezas gigante que, cuando se ensamblan, crean una imagen clara de cómo las máquinas pueden comprender y procesar información de manera sorprendentemente similar a nosotros.</p>
+                <p>Estos conceptos, aunque suenan complejos, son los bloques de construcción que permiten a las máquinas aprender, razonar y tomar decisiones. Piensa en ellos como piezas de un rompecabezas gigante que, cuando se ensamblan, crean una imagen clara de cómo las máquinas pueden comprender y procesar información de manera sorprendentemente similar a nosotros.</p>
                 <br>
                 <br>
             </div>   
