--- a/ia/algoritmos.html
+++ b/ia/algoritmos.html
@@ -156,7 +156,7 @@
                     <p>Las redes neuronales artificiales son modelos inspirados en el cerebro humano, con múltiples capas de neuronas interconectadas. Se utilizan en una amplia variedad de tareas, como clasificación, regresión, procesamiento de imágenes y procesamiento del lenguaje natural.</p>
                     <p>Ejemplo: Supongamos que queremos entrenar un modelo para reconocer números escritos a mano. Utilizaríamos una red neuronal con capas de neuronas que aprenden a identificar características básicas de los dígitos y, a medida que avanzamos en las capas, las características se vuelven más complejas, permitiendo una clasificación precisa.</p>
                     <div class="blog-image-grande">
-                        <img src="media/algoritmo10.jpeg" alt="">
+                        <img src="media/deep5.png" alt="">
                     </div> 
                     <li>Redes Neuronales Convolucionales (CNN)</li>
                     <p>Las redes neuronales convolucionales son una variante de las redes neuronales artificiales, diseñadas específicamente para el procesamiento de imágenes y datos con estructura espacial. Utilizan operaciones de convolución para aprender patrones y características visuales en las imágenes.</p>
