--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -46,7 +46,7 @@
                 <p>Imagina una red neuronal para identificar animales. La primera capa podría detectar líneas y bordes en la imagen, la siguiente capa reconocería formas básicas, como círculos o triángulos, y las últimas capas identificarían características más avanzadas y específicas de los animales, como orejas puntiagudas o patrones de piel.</p>
                 <p>El entrenamiento de estas redes requiere una gran cantidad de datos y potencia de cómputo. Pero una vez que el proceso de entrenamiento se completa, la red neuronal puede generalizar y realizar tareas, incluso con datos nuevos que nunca ha visto antes.</p>
                 <div class="blog-image-grande">
-                    <img src="media/deep5.png" alt="">
+                    <img src="media/deep3.jpg" alt="">
                 </div>
                 <h2>Aplicaciones</h2>
                 <p>El Deep Learning ha impulsado el progreso en diversas áreas y ha llevado a avances significativos en la sociedad. A continuación, se presentan algunas aplicaciones del Deep Learning que tal vez encuentres familiar:</p>
@@ -57,7 +57,7 @@
                     <li>Salud y medicina: Los diagnósticos médicos se han mejorado significativamente gracias a aplicaciones de Deep Learning que ayudan a analizar imágenes médicas, detectar enfermedades y planificar tratamientos más efectivos.</li>
                 </ol>
                 <div class="blog-image-grande">
-                    <img src="media/deep3.jpg" alt="">
+                    <img src="media/transformers4.jpg" alt="">
                 </div>
                 <h2>Conceptos clave</h2>
                 <ul style="list-style-type: circle;">
