--- a/ia.html
+++ b/ia.html
@@ -57,6 +57,10 @@
             <img src="media/imagen3.png" alt="Conceptos clave del Deep Learning" class="article-image">
             <h2><a href="ia/conceptos.html">Conceptos clave del Deep Learning</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Transformers" class="article-image">
+            <h2><a href="ia/transformers.html">Transformers</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
